update mobile and dark mode issues

--- a/assets-nsg/css/style.css
+++ b/assets-nsg/css/style.css
@@ -3267,5 +3267,6 @@ table.dataTable {
 } 
 
 #common-slider .owl-dots {
-  display: block;}
+  display: block;
+}
 }
